--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
 
     <!--links to provide access to respective style sheets and logo-->
     <link rel="stylesheet" href="./styles/index.css" />
-    <link rel="stylesheet" href="./styles/homes.css" />
+    <link rel="stylesheet" href="./styles/home.css" />
     <!-- <link rel="manifest" href="/site.webmanifest"> This might convert image-logo into icon-logo-->
 
     <!-- Font Awesome to use icons on the footer-->
