Continue WIP of main web page, vectorization of company logo, adjustment of colors, and addition to 'images' folder of screenshots of online resources

--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>HV-High Value, Web Development</title>
 
-    <!--links to provide access to respective style sheets and logo-->
+    <!--links for styling standard website page and home page-->
     <link rel="stylesheet" href="./styles/index.css" />
     <link rel="stylesheet" href="./styles/home.css" />
     <!-- <link rel="manifest" href="/site.webmanifest"> This might convert image-logo into icon-logo-->
@@ -19,16 +19,16 @@
 
 <body>
     <header>
-        <!--Div includes compayny logo-->
+        <!--Div includes company logo as an icon file-->
         <div class="logo-company">
             <a href="#">
-                <img src="./images/HV-logo-red.png" alt="HV - High Value logo" />
+                <img src="./images/HV-logo.svg" alt="HV - High Value logo" />
             </a>
             <!--Text that includes "Web development" under the logo to clarify company purpose-->
-            <p class="web-development">
+            <!-- <p class="web-development">
                 <span class="web-name">Web</span>
                 <span class="development-name">development</span>
-            </p>
+            </p> -->
         </div>
         <nav id="nav-items">
             <!--Anchors to link buttons from nav bar to their respective website pages -->
@@ -41,13 +41,13 @@
         </nav>
     </header>
     <main>
-        <section>
-            <!--Element for picture in home page-->
-            <div class="main-picture" alt="main picture interim for a better pic">
+        <!-- <section> -->
+        <!--Element for picture in home page-->
+        <!-- <div class="main-picture" alt="main picture interim for a better pic">
                 <img src="./images/home-page.avif">
-            </div>
-            <!--Element for text relevant to home page-->
-            <div class="home-text">
+            </div> -->
+        <!--Element for text relevant to home page-->
+        <!-- <div class="home-text">
                 <p>One morning, when Gregor Samsa woke from troubled dreams, he found himself transformed in his bed
                     into a
                     horrible vermin. He lay on his armour-like back, and if he lifted his head a little he could see his
@@ -68,7 +68,8 @@
                     to look out the window at the dull weather. Drops
                 </p>
             </div>
-        </section>
+        </section> -->
+
     </main>
     <footer>
         <!--Icons linked to social media, Linkedin, Facebook, Github-->
