WIP styling of main webpage, aligning logo-company to the left, space-out and align nav-pages elements, flexbox applied to various elements for responsiveness

--- a/src/index.html
+++ b/src/index.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>HV-High Value, Web Development</title>
+    <title>HernanVelasquez_T1A2, HV High Value, Web Development</title>
 
     <!--links for styling standard website page and home page-->
     <link rel="stylesheet" href="./styles/index.css" />
@@ -20,23 +19,20 @@
     <header>
         <!--Div includes company logo as an icon file-->
         <div class="logo-company">
-            <a href="#">
+            <a href="./index.html">
                 <img src="./images/HV-logo.svg" alt="HV - High Value logo" />
             </a>
-            <!--Text that includes "Web development" under the logo to clarify company purpose-->
-            <!-- <p class="web-development">
-                <span class="web-name">Web</span>
-                <span class="development-name">development</span>
-            </p> -->
         </div>
-        <nav id="nav-items">
+        <nav class="nav-bar" id="nav-items">
+            <ul class="nav-pages">
             <!--Anchors to link buttons from nav bar to their respective website pages -->
-            <a href="#">Home</a>
-            <a href="./pages/services.html">Services</a>
-            <a href="./pages/clients.html">Clients</a>
-            <a href="./pages/about.html">About</a>
-            <a href="./pages/blog.html">Blog</a>
-            <a href="./pages/contact.html">Contact us</a>
+            <li><a href="#">Home</a></li>
+            <li><a href="./pages/services.html">Services</a></li>
+            <li><a href="./pages/clients.html">Clients</a></li>
+            <li><a href="./pages/about.html">About</a></li>
+            <li><a href="./pages/blog.html">Blog</a></li>
+            <li><a href="./pages/contact.html">Contact us</a></li>
+        </ul>
         </nav>
     </header>
     <main>
