Animation of nav-bar, hover and and active pseudo-classes applied - WIP. Also added instagram link on social-media

--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>HernanVelasquez_T1A2, HV High Value, Web Development</title>
 
-    <!--links for styling standard website page and home page-->
+    <!--links for styling main webpage and home page-->
     <link rel="stylesheet" href="./styles/index.css" />
     <link rel="stylesheet" href="./styles/home.css" />
 
@@ -19,10 +19,11 @@
     <header>
         <!--Div includes company logo as an icon file-->
         <div class="logo-company">
-            <a href="./index.html">
-                <img src="./images/HV-logo.svg" alt="HV - High Value logo" />
+            <!-- <a href="./index.html"> -->
+                <img src="./images/HV-logo.svg" alt="HV - High Value logo"/>
             </a>
         </div>
+        <!--Navigation bar with different buttons linked to different pages of website-->
         <nav class="nav-bar" id="nav-items">
             <ul class="nav-pages">
             <!--Anchors to link buttons from nav bar to their respective website pages -->
@@ -67,7 +68,7 @@
 
     </main>
     <footer>
-        <!--Icons linked to social media, Linkedin, Facebook, Github-->
+        <!--Icons linked to social media, Linkedin, Facebook, Github, Instagram-->
         <div class="social-media">
             <a href="https://www.linkedin.com" target="_blank">
                 <i class="fa-brands fa-linkedin-in"></i>
@@ -79,12 +80,19 @@
             <a href="https://www.github.com" target="_blank">
                 <i class="fa-brands fa-github"></i>
             </a>
+            <a href="https://www.Instagram.com" target="_blank">
+                <i class="fa-brands fa-instagram"></i>
+            </a>
         </div>
         <!--Relevant information like contact details, phone number, Privacy Policy and Terms &
         Conditions links-->
         <div class="info">
-            <p>3/537 Cuba street, Aliceland</p>
-            <p>Talk to us (07) WEB-927810</p>
+            <p>Level 20, 162 Pope St,
+            Suburbia QLD 8.900
+            </p>
+            <p>01 0343 6336
+            hello@highvalue.com
+            </p>
             <p>Privacy Policy</p>
             <p>T&C</p>
         </div>
