Created additional CSS files for remaining elements of website, styled nav-bar and trial to implement transitions on nav-list

--- a/src/index.html
+++ b/src/index.html
@@ -24,19 +24,21 @@
             </a>
         </div>
         <!--Navigation bar with different buttons linked to different pages of website-->
-        <nav class="nav-bar" id="nav-items">
-            <ul class="nav-pages">
+        <nav class="panel" id="nav-pages">
+            <ul class="nav-list">
             <!--Anchors to link buttons from nav bar to their respective website pages -->
-            <li><a href="#">Home</a></li>
-            <li><a href="./pages/services.html">Services</a></li>
-            <li><a href="./pages/clients.html">Clients</a></li>
-            <li><a href="./pages/about.html">About</a></li>
-            <li><a href="./pages/blog.html">Blog</a></li>
-            <li><a href="./pages/contact.html">Contact us</a></li>
+            <li><a href="#" class="nav-link active">Home</a></li>
+            <li><a href="./pages/services.html" class="nav-link">Services</a></li>
+            <li><a href="./pages/clients.html" class="nav-link">Clients</a></li>
+            <li><a href="./pages/about.html" class="nav-link">About</a></li>
+            <li><a href="./pages/blog.html" class="nav-link">Blog</a></li>
+            <li><a href="./pages/contact.html" class="nav-link">Contact us</a></li>
         </ul>
         </nav>
     </header>
     <main>
+
+        <p> This is the main page</p>
         <!-- <section> -->
         <!--Element for picture in home page-->
         <!-- <div class="main-picture" alt="main picture interim for a better pic">
