--- a/src/pages/services.html
+++ b/src/pages/services.html
@@ -35,6 +35,11 @@
         </ul>
         </nav>
     </header>
+
+    <main>
+        <p>This is the services page</p>
+
+    </main>
     <main>
        
 
