--- a/src/index.html
+++ b/src/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HernanVelasquez_T1A2, HV High Value, Web Development</title>
 
     <!--links for styling main webpage and home page-->
@@ -39,30 +39,59 @@
 
        
     </main>
-<footer class="footer-panel footer-links">
-    <div class="social-media">
-        <a href="https://www.linkedin.com" target="_blank">
-            <i class="fa-brands fa-linkedin-in"></i>
-        </a>
-        <a href="https://www.facebook.com" target="_blank">
-            <i class="fa-brands fa-facebook-f"></i>
-        </a>
-        <a href="https://www.github.com" target="_blank">
-            <i class="fa-brands fa-github"></i>
-        </a>
-        <a href="https://www.Instagram.com" target="_blank">
-            <i class="fa-brands fa-instagram"></i>
-        </a>
-    </div>
-    <div class="info">
-        <p class="info-text">Level 20, 162 Pope St, Suburbia QLD 8.900
-        </p>
-        <p class="info-text">01 0343 6336 hello@highvalue.com
-        </p>
-        <p class="info-text">Privacy Policy Terms & Conditions
-        </p>
-    </div>
-    <p class="rights">Copyright © 2024 HV</p>
-</footer>
+    <footer class="footer-panel">
+        <div class="social-media">
+            <a href="https://www.linkedin.com" target="_blank">
+                <i class="fa-brands fa-linkedin-in"></i>
+            </a>
+            <a href="https://www.facebook.com" target="_blank">
+                <i class="fa-brands fa-facebook-f"></i>
+            </a>
+            <a href="https://www.github.com" target="_blank">
+                <i class="fa-brands fa-github"></i>
+            </a>
+            <a href="https://www.Instagram.com" target="_blank">
+                <i class="fa-brands fa-instagram"></i>
+            </a>
+        </div>
+
+        <div class="info">
+            <div class="info-item">
+                <p class="info-add">Level 20, 162 Bosque St,</p>
+                <p class="info-add">Suburbia QLD 8.900</p>
+            </div>
+            <div class="info-item">
+                <p class="info-contact">01 0343 6336</p>
+                <p class="info-contact">hello@highvalue.com</p>
+            </div>
+        </div>
+
+
+
+
+
+
+        <!-- <div OPTION USING FLEXBOX class="info">
+            <span class="info-text">Level 20, 162 Bosque St,</span>
+            <span class="info-text">Suburbia QLD 8.900</span>
+        </div> 
+        </div>-->
+
+
+
+
+
+
+
+        <!-- <div class="info">
+            <p class="info-text">Level 20, 162 Pope St, Suburbia QLD 8.900
+            </p>
+            <p class="info-text">01 0343 6336 hello@highvalue.com
+            </p>
+            <p class="info-text">Privacy Policy Terms & Conditions
+            </p>
+        </div>
+        <p class="rights">Copyright © 2024 HV</p> -->
+    </footer>
 </body>
 </html>
