--- a/src/pages/services.html
+++ b/src/pages/services.html
@@ -1,27 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HernanVelasquez_T1A2, HV High Value, Web Development</title>
 
     <!--links for styling main webpage and home page-->
-    <link rel="stylesheet" href="../styles/index.css" />
-    <link rel="stylesheet" href="../styles/services.css" />
+    <link rel="stylesheet" href="../styles/index.css"/>
+    <link rel="stylesheet" href="../styles/services"/>
 
     <!-- Font Awesome to use icons on the footer-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
         integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
+        crossorigin="anonymous" referrerpolicy="no-referrer"/>
 </head>
-
 <body>
     <header>
         <!--Div includes company logo as an icon file-->
         <div class="logo-company">
             <!-- <a href="./index.html"> -->
-                <img src="../images/HV-logo.svg" alt="HV - High Value logo"/>
-            </a>
+                <img src="../images/HV-logo.svg" alt="HV - High Value logo">
         </div>
         <!--Navigation bar with different buttons linked to different pages of website-->
         <nav class="panel" id="nav-pages">
@@ -36,29 +34,18 @@
         </nav>
     </header>
 
-    <main>
-        <p>This is the services page</p>
 
-    </main>
     <main>
+
        
-
-
-
-
-
-
-
     </main>
-    <footer>
-        <!--Icons linked to social media, Linkedin, Facebook, Github, Instagram-->
+    <footer class="footer-panel">
         <div class="social-media">
             <a href="https://www.linkedin.com" target="_blank">
                 <i class="fa-brands fa-linkedin-in"></i>
             </a>
             <a href="https://www.facebook.com" target="_blank">
                 <i class="fa-brands fa-facebook-f"></i>
-            </a>
             </a>
             <a href="https://www.github.com" target="_blank">
                 <i class="fa-brands fa-github"></i>
@@ -67,19 +54,44 @@
                 <i class="fa-brands fa-instagram"></i>
             </a>
         </div>
-        <!--Relevant information like contact details, phone number, Privacy Policy and Terms &
-        Conditions links-->
+
         <div class="info">
-            <p>Level 20, 162 Pope St,
-            Suburbia QLD 8.900
-            </p>
-            <p>01 0343 6336
-            hello@highvalue.com
-            </p>
-            <p>Privacy Policy</p>
-            <p>T&C</p>
+            <div class="info-item">
+                <p class="info-add">Level 20, 162 Bosque St,</p>
+                <p class="info-add">Suburbia QLD 8.900</p>
+            </div>
+            <div class="info-item">
+                <p class="info-contact">01 0343 6336</p>
+                <p class="info-contact">hello@highvalue.com</p>
+            </div>
         </div>
+
+
+
+
+
+
+        <!-- <div OPTION USING FLEXBOX class="info">
+            <span class="info-text">Level 20, 162 Bosque St,</span>
+            <span class="info-text">Suburbia QLD 8.900</span>
+        </div> 
+        </div>-->
+
+
+
+
+
+
+
+        <!-- <div class="info">
+            <p class="info-text">Level 20, 162 Pope St, Suburbia QLD 8.900
+            </p>
+            <p class="info-text">01 0343 6336 hello@highvalue.com
+            </p>
+            <p class="info-text">Privacy Policy Terms & Conditions
+            </p>
+        </div>
+        <p class="rights">Copyright © 2024 HV</p> -->
     </footer>
 </body>
-
 </html>
