--- a/src/index.html
+++ b/src/index.html
@@ -1,43 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HernanVelasquez_T1A2, HV High Value, Web Development</title>
+<!--Font Monteserrat Subrayada from Google fonts-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat+Subrayada:wght@400;700&display=swap"
+        rel="stylesheet">
 
     <!--links for styling main webpage and home page-->
-    <link rel="stylesheet" href="./styles/index.css"/>
-    <link rel="stylesheet" href="./styles/home.css"/>
+    <link rel="stylesheet" href="./styles/index.css" />
+    <link rel="stylesheet" href="./styles/home.css" />
 
     <!-- Font Awesome to use icons on the footer-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
         integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
-        crossorigin="anonymous" referrerpolicy="no-referrer"/>
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
+
 <body>
     <header>
-        <!--Div includes company logo as an icon file-->
+        <!-- <div class="logo-company">
+            <p class="h-logo">&lt;Hernan</p>
+            <p class="v-logo">Velasquez&gt;</p>
+        </div> -->
+
+
+
+
+        <!-- Div includes company logo as an icon file -->
         <div class="logo-company">
-            <!-- <a href="./index.html"> -->
-                <img src="./images/HV-logo.svg" alt="HV - High Value logo">
+            <a href="./index.html">
+        <img src="./images/HV-hv-logo.svg" alt="HV - High Value logo">
         </div>
         <!--Navigation bar with different buttons linked to different pages of website-->
         <nav class="panel" id="nav-pages">
             <ul class="nav-list">
-            <!--Anchors to link buttons from nav bar to their respective website pages -->
-            <li><a href="#" class="nav-link active">Home</a></li>
-            <li><a href="./pages/services.html" class="nav-link">Services</a></li>
-            <li><a href="./pages/about.html" class="nav-link">About</a></li>
-            <li><a href="./pages/blog.html" class="nav-link">Blog</a></li>
-            <li><a href="./pages/contact.html" class="nav-link">Contact us</a></li>
-        </ul>
+                <!--Anchors to link buttons from nav bar to their respective website pages -->
+                <li><a href="#" class="nav-link active">Home</a></li>
+                <li><a href="./pages/services.html" class="nav-link">Services</a></li>
+                <li><a href="./pages/about.html" class="nav-link">About</a></li>
+                <li><a href="./pages/blog.html" class="nav-link">Blog</a></li>
+                <li><a href="./pages/contact.html" class="nav-link">Contact us</a></li>
+            </ul>
         </nav>
     </header>
 
 
     <main>
 
-       
+
     </main>
     <footer class="footer-panel">
         <div class="social-media">
@@ -94,4 +109,5 @@
         <p class="rights">Copyright © 2024 HV</p> -->
     </footer>
 </body>
+
 </html>
