Erased embeded font from Google fonts, styling of footer in laptop view, change of primary-color for body to a more user friendly one, and completed media query of main page for tablets

--- a/src/index.html
+++ b/src/index.html
@@ -5,11 +5,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HernanVelasquez_T1A2, HV High Value, Web Development</title>
-<!--Font Monteserrat Subrayada from Google fonts-->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat+Subrayada:wght@400;700&display=swap"
-        rel="stylesheet">
 
     <!--links for styling main webpage and home page-->
     <link rel="stylesheet" href="./styles/index.css" />
@@ -76,37 +71,11 @@
                 <p class="info-add">Suburbia QLD 8.900</p>
             </div>
             <div class="info-item">
-                <p class="info-contact">01 0343 6336</p>
-                <p class="info-contact">hello@highvalue.com</p>
+                <p class="info-contact">0426 227 810</p>
+                <p class="info-contact">hernan.velasquez@gmail.com</p>
             </div>
         </div>
 
-
-
-
-
-
-        <!-- <div OPTION USING FLEXBOX class="info">
-            <span class="info-text">Level 20, 162 Bosque St,</span>
-            <span class="info-text">Suburbia QLD 8.900</span>
-        </div> 
-        </div>-->
-
-
-
-
-
-
-
-        <!-- <div class="info">
-            <p class="info-text">Level 20, 162 Pope St, Suburbia QLD 8.900
-            </p>
-            <p class="info-text">01 0343 6336 hello@highvalue.com
-            </p>
-            <p class="info-text">Privacy Policy Terms & Conditions
-            </p>
-        </div>
-        <p class="rights">Copyright © 2024 HV</p> -->
     </footer>
 </body>
 
