Responsiveness of mobile updated. Pending to bring the nav bar fully to the bottom and the nav bar completly to the right, both in the mobile view.

--- a/src/index.html
+++ b/src/index.html
@@ -18,18 +18,10 @@
 
 <body>
     <header>
-        <!-- <div class="logo-company">
-            <p class="h-logo">&lt;Hernan</p>
-            <p class="v-logo">Velasquez&gt;</p>
-        </div> -->
-
-
-
-
-        <!-- Div includes company logo as an icon file -->
+        <!-- Logo company equivalent in this case to my name -->
         <div class="logo-company">
             <a href="./index.html">
-        <img src="./images/HV-hv-logo.svg" alt="HV - High Value logo">
+        <img src="./images/HV-hv-logo.svg" alt="Hernan Velasquez logo">
         </div>
         <!--Navigation bar with different buttons linked to different pages of website-->
         <nav class="panel" id="nav-pages">
@@ -49,7 +41,7 @@
 
 
     </main>
-    <footer class="footer-panel">
+    <footer>
         <div class="social-media">
             <a href="https://www.linkedin.com" target="_blank">
                 <i class="fa-brands fa-linkedin-in"></i>
@@ -75,8 +67,6 @@
                 <p class="info-contact">hernan.velasquez@gmail.com</p>
             </div>
         </div>
-
     </footer>
 </body>
-
 </html>
