Last update to deploy as test

--- a/src/index.html
+++ b/src/index.html
@@ -35,28 +35,24 @@
             </ul>
         </nav>
     </header>
-
-
     <main>
-
 
     </main>
     <footer>
         <div class="social-media">
-            <a href="https://www.linkedin.com" target="_blank">
+            <a href="https://www.linkedin.com" target="https://www.linkedin.com/in/hernan-velasquez-672b85130/">
                 <i class="fa-brands fa-linkedin-in"></i>
             </a>
             <a href="https://www.facebook.com" target="_blank">
                 <i class="fa-brands fa-facebook-f"></i>
             </a>
-            <a href="https://www.github.com" target="_blank">
+            <a href="https://www.github.com" target="https://github.com/hernan-vela">
                 <i class="fa-brands fa-github"></i>
             </a>
             <a href="https://www.Instagram.com" target="_blank">
                 <i class="fa-brands fa-instagram"></i>
             </a>
         </div>
-
         <div class="info">
             <div class="info-item">
                 <p class="info-add">Level 20, 162 Bosque St,</p>
