Styling of contac.html, set up of form and styling of its part (WIP)

--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -15,7 +14,6 @@
         integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
-
 <body>
     <header>
         <!-- Logo company equivalent in this case to my name -->
@@ -28,10 +26,9 @@
             <ul class="nav-list">
                 <!--Anchors to link buttons from nav bar to their respective website pages -->
                 <li><a href="#" class="nav-link active">Home</a></li>
-                <li><a href="./pages/services.html" class="nav-link">Services</a></li>
                 <li><a href="./pages/about.html" class="nav-link">About</a></li>
                 <li><a href="./pages/blog.html" class="nav-link">Blog</a></li>
-                <li><a href="./pages/contact.html" class="nav-link">Contact us</a></li>
+                <li><a href="./pages/contact.html" class="nav-link">Contact</a></li>
             </ul>
         </nav>
     </header>
