--- a/src/pages/genblog.html
+++ b/src/pages/genblog.html
@@ -28,27 +28,28 @@
             <ul class="nav-list">
                 <!--Anchors to link buttons from nav bar to their respective website pages -->
                 <li><a href="../index.html" class="nav-link">Home</a></li>
-                <li><a href="./pages/about.html" class="nav-link">About</a></li>
-                <li><a href="./pages/blog.html" class="nav-link">Blog</a></li>
-                <li><a href="./pages/contact.html" class="nav-link">Contact</a></li>
+                <li><a href="../pages/about.html" class="nav-link">About</a></li>
+                <li><a href="../pages/blog.html" class="nav-link">Blog</a></li>
+                <li><a href="../pages/contact.html" class="nav-link">Contact</a></li>
             </ul>
         </nav>
     </header>
     <main>
-        <!-- Generic placeholder taken from https://www.blindtextgenerator.com/ -->
-        <h1>Blog entry for all posts of this website</h1>
-        <p>The European languages are members of the same family. Their separate existence is a myth. For science,
-            music, sport, etc, Europe uses the same vocabulary. The languages only differ in their grammar, their
-            pronunciation and their most common words. Everyone realizes why a new common language would be desirable:
-            one could refuse to pay expensive translators. To achieve this, it would be necessary to have uniform
-            grammar, pronunciation and more common words. If several languages coalesce, the grammar of the resulting
-            language is more simple and regular than that of the individual languages. The new common language will be
-            more simple and regular than the existing European languages. It will be as simple as Occidental; in fact,
-            it will be Occidental. To an English person, it will seem like simplified English, as a skeptical Cambridge
-            friend of mine told me what Occidental is.The European languages are members of the same family. Their
-            separate existence is a myth. For science, music, sport, etc, Europe uses the same vocabulary. The languages
-            only differ in their grammar, their pronunciation and their most common words. Everyone realizes why a new
-            common language would be desirable: one could refuse to pay expensive translators.</p>
+        <section>
+            <h1>Blog entry for all posts of this website</h1>
+            <div class="genblog-image" alt="close-up of code in green characters">
+                    <img src="../images/greencode-genblog.jpg">
+            </div>
+            <div class="genblog-entry">
+                <!-- Generic placeholder taken from https://www.blindtextgenerator.com/ -->
+            <p>The European languages are members of the same family. Their separate existence is a myth. For science,
+                music, sport, etc, Europe uses the same vocabulary. The languages only differ in their grammar, their
+                pronunciation and their most common words. Everyone realizes why a new common language would be desirable:
+                one could refuse to pay expensive translators. To achieve this, it would be necessary to have uniform
+                grammar
+            </p>
+            </div>
+                  </section>
     </main>
     <footer>
         <div class="social-media">
