--- a/src/pages/blog.html
+++ b/src/pages/blog.html
@@ -35,42 +35,60 @@
     </header>
     <main>
         <!-- Articles to define blog entries. Each article correspond to one entry-->
+
+
+
      <article class="blog-post">
-        <!-- <a href="../pages/genblog.html"></a> -->
-        <figure class="blog-image">
+        <section class="blog-image">
             <img src="../images/Workers-blog1.jpg" alt="Lego workers on a biscuit">
-        </figure>
-        <a class="blog-title" href="../pages/genblog.html">Team work became sweeter</a>
-        <h2 class="blog-date">Date: 01.Dec.2023</h2>
+            <a class="blog-title" href="../pages/genblog.html">Team work became sweeter</a>
+        </section>
+            <section>
+                <h4 class="blog-date">Date: 01.Dec.2023</h4>
+            </section>
      </article>
+
      <article class="blog-post">
-        <figure class="blog-image">
+        <section class="blog-image">
             <img src="../images/circuit-blog2.jpg" alt="Circuit board with red wires">
-        </figure>
-        <h1 class="blog-title">Rewire your brain now</h1>
-        <h2 class="blog-date">Date: 02.Nov.2023</h2>
+            <a class="blog-title" href="../pages/genblog.html">Rewire your brain now</a>
+        </section>
+            <section>
+                <h4 class="blog-date">Date: 02.Jan.2024</h4>
+            </section>
      </article>
+
      <article class="blog-post">
-        <figure class="blog-image">
+        <section class="blog-image">
             <img src="../images/minicar-blog3.jpg" alt="Yellow Simca at pedestrian cross">
-        </figure>
-        <h1 class="blog-title">New tech & old machines</h1>
-        <h2 class="blog-date">Date: 03.Jan.2024</h2>
+            <a class="blog-title" href="../pages/genblog.html">New tech & old machines</a>
+        </section>
+            <section>
+                <h4 class="blog-date">Date: 03.Feb.2024</h4>
+            </section>
      </article>
+
      <article class="blog-post">
-        <figure class="blog-image">
+        <section class="blog-image">
             <img src="../images/pool-blog4.jpg" alt="Air view of swimming pool">
-        </figure>
-        <h1 class="blog-title">Swimming in info-adds</h1>
-        <h2 class="blog-date">Date: 04.Feb.2023</h2>
+            <a class="blog-title" href="../pages/genblog.html">Swimming in info-adds</a>
+        </section>
+            <section>
+                <h4 class="blog-date">Date: 04.Mar.2024</h4>
+            </section>
      </article>
+
      <article class="blog-post">
-        <figure class="blog-image">
-            <img src="../images/pills-blog5.jpeg" alt="Pills with faces drawn">
-        </figure>
-        <h1 class="blog-title">3D printed med pills</h1>
-        <h2 class="blog-date">Date: 05.Mar.2023</h2>
+        <section class="blog-image">
+            <img src="../images/pills-blog5.jpeg" alt="Pills with drawn drawn">
+            <a class="blog-title" href="../pages/genblog.html">Swimming in info-adds</a>
+        </section>
+            <section>
+                <h4 class="blog-date">Date: 05.Apr.2024</h4>
+            </section>
      </article>
+
+     
 
 
     </main>
