Set up of home.html and about.html. Page of home.css is nearly finished, except media query for tablets

--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -14,12 +15,13 @@
         integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
+
 <body>
     <header>
         <!-- Logo company equivalent in this case to my name -->
         <div class="logo-company">
             <a href="./index.html">
-        <img src="./images/HV-hv-logo.svg" alt="Hernan Velasquez logo">
+                <img src="./images/HV-hv-logo.svg" alt="Hernan Velasquez logo">
         </div>
         <!--Navigation bar with different buttons linked to different pages of website-->
         <nav class="panel" id="nav-pages">
@@ -33,7 +35,19 @@
         </nav>
     </header>
     <main>
-
+        <section class="welcome">
+            <!--Profile picture of Hernan Velasquez -->
+            <div class="profile-pic" alt="profile picture of Hernan Velasquez">
+                <img src="./images/HernanVelasquez-pic.jpg">
+            </div>
+            <!-- Welcome text -->
+            <div class="welcome-text">
+                <h1>Welcome to my website! I'm Hernan, an adventurer always willing to dive where curiosity takes me. I'm currently growing 
+                    my web development skills, but I also have a background in enginnering of bioprocesses, wastewater tratement, and biochemistry.
+                    Lately, if I'm not learning about programming, I might be swimming, diving, cooking, planning a new trip or learning 
+                    how to build things with wooden.</h1>
+            </div>
+        </section>
     </main>
     <footer>
         <div class="social-media">
@@ -62,4 +76,5 @@
         </div>
     </footer>
 </body>
+
 </html>
