--- a/src/pages/blog.html
+++ b/src/pages/blog.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HernanVelasquez_T1A2, HV High Value, Web Development</title>
 
-    <!--links for styling main webpage and contact page-->
+    <!--links for styling main webpage and blog page-->
     <link rel="stylesheet" href="../styles/index.css" />
     <link rel="stylesheet" href="../styles/blog.css" />
 
@@ -35,39 +35,37 @@
     </header>
     <main>
         <!-- Articles to define blog entries. Each article correspond to one entry-->
-
-
-
-     <article class="blog-post">
+        <!-- First blog post -->
+     <article  class="blog-post">
         <section class="blog-image">
             <img src="../images/Workers-blog1.jpg" alt="Lego workers on a biscuit">
             <a class="blog-title" href="../pages/genblog.html">Team work became sweeter</a>
         </section>
             <section>
-                <h4 class="blog-date">Date: 01.Dec.2023</h4>
+                <h4 class="blog-date">Published: 01.Dec.2023</h4>
             </section>
      </article>
-
+     <!-- Second blog post -->
      <article class="blog-post">
         <section class="blog-image">
             <img src="../images/circuit-blog2.jpg" alt="Circuit board with red wires">
             <a class="blog-title" href="../pages/genblog.html">Rewire your brain now</a>
         </section>
             <section>
-                <h4 class="blog-date">Date: 02.Jan.2024</h4>
+                <h4 class="blog-date">Published: 02.Jan.2024</h4>
             </section>
      </article>
-
+<!-- Third blog post -->
      <article class="blog-post">
         <section class="blog-image">
             <img src="../images/minicar-blog3.jpg" alt="Yellow Simca at pedestrian cross">
             <a class="blog-title" href="../pages/genblog.html">New tech & old machines</a>
         </section>
             <section>
-                <h4 class="blog-date">Date: 03.Feb.2024</h4>
+                <h4 class="blog-date">Publ: 03.Feb.2024</h4>
             </section>
      </article>
-
+<!-- Fourth blog post -->
      <article class="blog-post">
         <section class="blog-image">
             <img src="../images/pool-blog4.jpg" alt="Air view of swimming pool">
@@ -77,20 +75,16 @@
                 <h4 class="blog-date">Date: 04.Mar.2024</h4>
             </section>
      </article>
-
+<!-- Fifth blog post -->
      <article class="blog-post">
         <section class="blog-image">
             <img src="../images/pills-blog5.jpeg" alt="Pills with drawn drawn">
-            <a class="blog-title" href="../pages/genblog.html">Swimming in info-adds</a>
+            <a class="blog-title" href="../pages/genblog.html">Med pills 3D printed</a>
         </section>
             <section>
                 <h4 class="blog-date">Date: 05.Apr.2024</h4>
             </section>
      </article>
-
-     
-
-
     </main>
     <footer>
         <div class="social-media">
