--- a/src/pages/genblog.html
+++ b/src/pages/genblog.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HernanVelasquez_T1A2, HV High Value, Web Development</title>
 
-    <!--links for styling main webpage and home page-->
+    <!--links for styling main webpage and generic blog post-->
     <link rel="stylesheet" href="../styles/index.css" />
     <link rel="stylesheet" href="../styles/genblog.css" />
 
