Test to repair broken link from about page that takes user to my resume and correction in blog page with 'Date' next to the publication date of each post

--- a/src/pages/about.html
+++ b/src/pages/about.html
@@ -54,7 +54,7 @@
             </section>
             <!-- Icon from FontAwesome that links to my resume -->
             <div class="resume">
-                <a href="../../docs/Resume-Hernan Velasquez(22).pdf" target="_blank">
+                <a href="../../docs/Resume-Hernan Velasquez(22).pdf" target="/Users/hernan/CoderAcademy/APR24/HernanVelasquez_T1A2/docs/Resume-HernanVelasquez(22).pdf">
                     <i class="fa-solid fa-folder-open">See more</i>
                 </a>
             </div>           
