--- a/src/pages/blog.html
+++ b/src/pages/blog.html
@@ -42,7 +42,7 @@
             <a class="blog-title" href="../pages/genblog.html">Team work became sweeter</a>
         </section>
             <section>
-                <h4 class="blog-date">Published: 01.Dec.2023</h4>
+                <h4 class="blog-date">Date: 01.Dec.2023</h4>
             </section>
      </article>
      <!-- Second blog post -->
@@ -52,7 +52,7 @@
             <a class="blog-title" href="../pages/genblog.html">Rewire your brain now</a>
         </section>
             <section>
-                <h4 class="blog-date">Published: 02.Jan.2024</h4>
+                <h4 class="blog-date">Date: 02.Jan.2024</h4>
             </section>
      </article>
 <!-- Third blog post -->
@@ -62,7 +62,7 @@
             <a class="blog-title" href="../pages/genblog.html">New tech & old machines</a>
         </section>
             <section>
-                <h4 class="blog-date">Publ: 03.Feb.2024</h4>
+                <h4 class="blog-date">Date: 03.Feb.2024</h4>
             </section>
      </article>
 <!-- Fourth blog post -->
